plugins {
    id 'net.neoforged.moddev.legacyforge' version '2.0.141' apply false
    id 'io.freefair.lombok' version '8.6' apply false
}

/*var fabricDeps = [
        "dev.su5ed.sinytra.fabric-api:fabric-data-attachment-api-v1:1.0.2+30ef839e77",
        "dev.su5ed.sinytra.fabric-api:fabric-entity-events-v1:1.6.1+4ca7515277",
        "dev.su5ed.sinytra.fabric-api:fabric-object-builder-api-v1:11.1.5+f8c414ce77",
        "dev.su5ed.sinytra.fabric-api:fabric-api-base:0.4.32+ef105b4977"
]*/

subprojects {
    apply plugin: 'idea'
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'net.neoforged.moddev.legacyforge'
    apply plugin: 'io.freefair.lombok'

    var dir = new File(rootProject.projectDir as String + "/build/${project.name}")
    if (!dir.exists()) dir.mkdirs()
    buildDir dir

    repositories {
        mavenLocal()
        mavenCentral()

        //kubejs
        maven {
            name = "Latvian"
            url = "https://maven.latvian.dev/releases"
            content {
                includeGroup "dev.latvian.mods"
                includeGroup "dev.latvian.apps"
            }
        }
        maven {
            name = "JitPack"
            url = "https://jitpack.io"
            content {
                includeGroup "com.github.rtyley"
            }
        }

        // LDLib2
        maven {
            name = "Jared's maven"
            url = "https://maven.firstdarkdev.xyz/snapshots"
        }

        //GeckoLib
        maven {
            name = 'GeckoLib'
            url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
            content {
                includeGroupByRegex("software\\.bernie.*")
                includeGroup("com.eliotlash.mclib")
            }
        }

        //Modrinth
        maven {
            name = "Modrinth"
            url = "https://api.modrinth.com/maven"
        }

        //cf
        maven { url "https://cursemaven.com" }

        maven { url "https://maven.sighs.cc/repository/maven-public/" }

        maven {
            name = "Illusive Soulworks maven"
            url = "https://maven.theillusivec4.top/"
        }
        // ffapi
        maven { url "https://maven.su5ed.dev/releases" }
        maven {
            name = "Kotlin for Forge"
            url = "https://thedarkcolour.github.io/KotlinForForge/"
        }
        maven {
            url = 'https://nikdo53.github.io'
        }
    }

    plugins.withId('java') {
        java.toolchain.languageVersion = JavaLanguageVersion.of(17)
    }

    plugins.withId('net.neoforged.moddev.legacyforge') {
        legacyForge {
            version = project.minecraft_version + '-' + project.forge_version
            parchment {
                mappingsVersion = project.parchment_mappings_version
                minecraftVersion = project.parchment_minecraft_version
            }
        }

        dependencies {
            // Mixin
            annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
            compileOnly "io.github.llamalad7:mixinextras-common:0.5.4"
            annotationProcessor "io.github.llamalad7:mixinextras-common:0.5.4"
            // kotlin
            implementation "thedarkcolour:kotlinforforge:4.12.0"
            // LDLib2
            //implementation("com.lowdragmc.ldlib2:ldlib2-neoforge-${minecraft_version}:${ldlib2_version}:all")
            implementation files('libs/ldlib2-forge-1.20.1-2.2.41.1-dev.jar')
            // StreamCodec、数据附件
            modImplementation "net.nikdo53:NeoBackports:1.4.2"
            interfaceInjectionData "net.nikdo53:NeoBackports:1.4.2"

            //联动模组
            // KubeJS
            modCompileOnly "dev.latvian.mods:rhino-forge:${rhino_version}"
            modCompileOnly "dev.latvian.mods:kubejs-forge:${kubejs_version}"
            //精妙背包
            modCompileOnly "maven.modrinth:sophisticated-backpacks:${sophisticated_backpacks_version}"
            modCompileOnly "maven.modrinth:sophisticated-core:${sophisticated_core_version}"
            //超越维度
            modCompileOnly "curse.maven:beyond-dimensions-1222890:${beyonddimensions_version}"
            //Lightman's Currency
            modCompileOnly "maven.modrinth:lightmans-currency:${lightmans_currency_version}"
            //汇流来世
            modCompileOnly "top.theillusivec4.curios:curios-forge:${curios_version}"
            /*modCompileOnly "org.confluence.lib:Confluence-Magic-Lib:${confluence_lib_version}"
            modCompileOnly ("org.confluence.mod:ConfluenceOtherworld:${confluence_version}") {
                transitive = false
            }*/
            modCompileOnly "maven.modrinth:terra-curio:${terra_curio_version}"
            modCompileOnly "maven.modrinth:terra-entity:${terra_entity_version}"
            //Magic Coins
            // modCompileOnly "curse.maven:magic-coins-597281:${magic_coins_version}"
            // modCompileOnly "curse.maven:sg-economy-api-1446971:${sg_economy_api_version}"
            //jech
            modImplementation "maven.modrinth:jei:${jei_version}"
            modCompileOnly "curse.maven:just-enough-characters-250702:${jech_version}"
            //ftb
            modCompileOnly "curse.maven:ftb-quests-forge-289412:8078538"
            modCompileOnly "curse.maven:ftb-library-forge-404465:8226927"
            modCompileOnly "curse.maven:ftb-teams-forge-404468:7499810"
            modCompileOnly "curse.maven:architectury-api-419699:5137938"
            //tacz
            // modCompileOnly "maven.modrinth:timeless-and-classics-zero:${tacz_version}"
            //拔刀剑
            // modCompileOnly "maven.modrinth:slashblade-resharped:${slashblade_resharped_version}"

            //must
            // modRuntimeOnly "maven.modrinth:embeddium:${sodium_version}"
            // runtimeOnly "maven.modrinth:iris:${iris_version}"
            // runtimeOnly "curse.maven:lan-server-properties-387365:${lsp_version}"
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
    }
    tasks.withType(ProcessResources).configureEach {
        duplicatesStrategy = DuplicatesStrategy.INCLUDE
    }

    plugins.withId('idea') {
        idea {
            module {
                downloadSources = true
                downloadJavadoc = true
            }
        }
    }
}

//configure(project(":ViScriptLib")) {
//    plugins.withId('net.neoforged.moddev.legacyforge') {
//    }
//}

tasks.register('buildAll', Copy) {
    group = 'build'
    description = '构建所有子项目，并把各子项目的 libs 产物复制到根项目的 build/libs'
    // 1. 先让所有子项目完成构建
    dependsOn subprojects.collect {sub -> sub.tasks.matching { it.name == 'build' }}
    // 2. 复制配置
    duplicatesStrategy = DuplicatesStrategy.INCLUDE   // 遇到同名文件时覆盖而不是报错
    includeEmptyDirs = false
    // 3. 源：每个子项目的 libs 目录（layout.buildDirectory 会自动指向 root/build/<子项目名>/libs）
    from(subprojects.collect { it.layout.buildDirectory.dir('libs') }) {
        include '*.jar'
    }
    into(rootProject.file('build/libs'))
}

tasks.register('cleanLibs', Delete) {
    group = 'build'
    description = '只删除所有子项目的构建目录下的 libs 和 devlibs 文件夹'

    delete(subprojects.collect { sub ->
        [
                sub.layout.buildDirectory.dir('libs').get().asFile,
                sub.layout.buildDirectory.dir('devlibs').get().asFile
        ]
    })
}